fix horizontal scroll issue on tablet

--- a/src/pages/homepage.module.scss
+++ b/src/pages/homepage.module.scss
@@ -11,6 +11,11 @@
     }
 }
 
+.homeContainer{
+    max-width: 100%;
+    overflow-x: hidden;
+}
+
 .heroContainer{
     position: relative;
     margin-bottom: 82px;
